@@ -292,7 +292,10 @@ Mehmet Yeşil contributed to the following functions.
   <P/>
   <Ref Func="NumericalSetByIntegerPartition"/>,
   <P/>
-  <Ref Prop="HookLengths"/>.
+  <Ref Prop="HookLengths"/>,
+  <P/>
+  <Ref Prop="DualNumericalSet"/>.
+
 
 </Section>
 
