@@ -32,6 +32,7 @@
 - Integer partitions associated to numerical sets and numerical semigroups
 - Numerical sets associated to integer partitions
 - Hook lenghts associated to integer partitions of numerical sets and semigroups
+- Dual of a numerical set (and numerical semigroup)
 1.3.1 -> 1.4.0
 - Added NumericalSemigroupsWithFrobeniusNumberPC
 - Added NumericalSemigroupsWithGenusPC
